--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,4 @@ Saved
 *.suo
 *.xcodeproj
 *.xcworkspace
-Build/WindowsNoEditor/FileOpenOrder/CookerOpenOrder.log
-Build/WindowsNoEditor/FileOpenOrder/EditorOpenOrder.log
-Build/WindowsNoEditor/FileOpenOrder/CookerOpenOrder.log
-Build/WindowsNoEditor/FileOpenOrder/EditorOpenOrder.log
+*.log
