--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,9 +77,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="Turn",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="Move Forward P2",Scale=-1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
