--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,7 @@ TwoPlayerSplitscreenLayout=Vertical
 GlobalDefaultGameMode=/Game/Game_Mode.Game_Mode_C
 EditorStartupMap=/Game/Levels/Untitled.Untitled
 GameInstanceClass=/Game/My_Game_Instance.My_Game_Instance_C
+bUseSplitscreen=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
