Game Mode name change, and delete previous map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Untitled.Untitled
+GameDefaultMap=/Game/Levels/Main_Map.Main_Map
 TwoPlayerSplitscreenLayout=Vertical
-GlobalDefaultGameMode=/Game/Game_Mode.Game_Mode_C
-EditorStartupMap=/Game/Levels/Untitled.Untitled
+GlobalDefaultGameMode=/Game/Game-Mode.Game-Mode_C
+EditorStartupMap=/Game/Levels/Main_Map.Main_Map
 GameInstanceClass=/Game/My_Game_Instance.My_Game_Instance_C
 bUseSplitscreen=True
 
