--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,6 +7,7 @@ GlobalDefaultGameMode=/Game/Game-Mode.Game-Mode_C
 EditorStartupMap=/Game/Levels/Main_Map.Main_Map
 GameInstanceClass=/Game/My_Game_Instance.My_Game_Instance_C
 bUseSplitscreen=True
+bOffsetPlayerGamepadIds=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
