--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,9 +77,50 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="Arm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Arm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="Q-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Q-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="E-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="E-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="F-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="F-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="R-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="R-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Elevate Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="Elevate Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="1-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
++ActionMappings=(ActionName="1-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="3-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
++ActionMappings=(ActionName="3-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="7-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadSeven)
++ActionMappings=(ActionName="7-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="9-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadNine)
++ActionMappings=(ActionName="9-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
++ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="Turn",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=NumPadEight)
++AxisMappings=(AxisName="Move Forward P2",Scale=-1.000000,Key=NumPadFive)
++AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=NumPadSix)
++AxisMappings=(AxisName="Move Right P2",Scale=-1.000000,Key=NumPadFour)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
