--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,8 +81,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="Arm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Arm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="Q-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
-+ActionMappings=(ActionName="Q-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="C-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="C-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +ActionMappings=(ActionName="E-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="E-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="F-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
@@ -93,21 +93,21 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Elevate Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +ActionMappings=(ActionName="Elevate Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
-+ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
 +ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
-+ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightShift)
 +ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="1-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
-+ActionMappings=(ActionName="1-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
-+ActionMappings=(ActionName="3-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
-+ActionMappings=(ActionName="3-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
-+ActionMappings=(ActionName="7-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadSeven)
-+ActionMappings=(ActionName="7-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="9-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadNine)
-+ActionMappings=(ActionName="9-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
-+ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Slash-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Slash)
++ActionMappings=(ActionName="Slash-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="Apostrophe-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Apostrophe)
++ActionMappings=(ActionName="Apostrophe-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="P-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="P-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="LeftBracket-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftBracket)
++ActionMappings=(ActionName="LeftBracket-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightAlt)
 +ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
-+ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
++ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
 +ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
@@ -117,10 +117,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=NumPadEight)
-+AxisMappings=(AxisName="Move Forward P2",Scale=-1.000000,Key=NumPadFive)
-+AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=NumPadSix)
-+AxisMappings=(AxisName="Move Right P2",Scale=-1.000000,Key=NumPadFour)
++AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=O)
++AxisMappings=(AxisName="Move Forward P2",Scale=-1.000000,Key=L)
++AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Semicolon)
++AxisMappings=(AxisName="Move Right P2",Scale=-1.000000,Key=K)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
