--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -111,16 +111,16 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=O)
-+AxisMappings=(AxisName="Move Forward P2",Scale=-1.000000,Key=L)
-+AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Semicolon)
-+AxisMappings=(AxisName="Move Right P2",Scale=-1.000000,Key=K)
++AxisMappings=(AxisName="Move Forward Keyboard",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward Keyboard",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Right Keyboard",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move Right Keyboard",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=1.000000,Key=O)
++AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=-1.000000,Key=L)
++AxisMappings=(AxisName="Move Right Keyboard P2",Scale=1.000000,Key=Semicolon)
++AxisMappings=(AxisName="Move Right Keyboard P2",Scale=-1.000000,Key=K)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
