--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Main_Map.Main_Map
+GameDefaultMap=/Game/Levels/Main_Menu.Main_Menu
 TwoPlayerSplitscreenLayout=Vertical
-GlobalDefaultGameMode=/Game/Game-Mode.Game-Mode_C
-EditorStartupMap=/Game/Levels/Main_Map.Main_Map
+GlobalDefaultGameMode=/Game/Main_Menu_Game_Mode.Main_Menu_Game_Mode_C
+EditorStartupMap=/Game/Levels/Main_Menu.Main_Menu
 GameInstanceClass=/Game/My_Game_Instance.My_Game_Instance_C
 bUseSplitscreen=True
 bOffsetPlayerGamepadIds=False
