Revert "Keyboard Fix"
This reverts commit 049f405f925fb3154dba43ff233deba58497d95b.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -97,14 +97,14 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightShift)
 +ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="Comma-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Comma)
-+ActionMappings=(ActionName="Comma-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
-+ActionMappings=(ActionName="Period-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Period)
-+ActionMappings=(ActionName="Period-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
-+ActionMappings=(ActionName="O-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
-+ActionMappings=(ActionName="O-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="P-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
-+ActionMappings=(ActionName="P-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Slash-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Slash)
++ActionMappings=(ActionName="Slash-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="Apostrophe-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Apostrophe)
++ActionMappings=(ActionName="Apostrophe-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="P-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="P-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="LeftBracket-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftBracket)
++ActionMappings=(ActionName="LeftBracket-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightAlt)
 +ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
@@ -117,10 +117,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move Forward Keyboard",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Right Keyboard",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move Right Keyboard",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=1.000000,Key=I)
-+AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=-1.000000,Key=K)
-+AxisMappings=(AxisName="Move Right Keyboard P2",Scale=1.000000,Key=L)
-+AxisMappings=(AxisName="Move Right Keyboard P2",Scale=-1.000000,Key=J)
++AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=1.000000,Key=O)
++AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=-1.000000,Key=L)
++AxisMappings=(AxisName="Move Right Keyboard P2",Scale=1.000000,Key=Semicolon)
++AxisMappings=(AxisName="Move Right Keyboard P2",Scale=-1.000000,Key=K)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
