--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Saved
 *.xcodeproj
 *.xcworkspace
 *.log
+Build/WindowsNoEditor/FileOpenOrder/CookerOpenOrder.log
+Build/WindowsNoEditor/FileOpenOrder/EditorOpenOrder.log
