--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -121,6 +121,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=-1.000000,Key=L)
 +AxisMappings=(AxisName="Move Right Keyboard P2",Scale=1.000000,Key=Semicolon)
 +AxisMappings=(AxisName="Move Right Keyboard P2",Scale=-1.000000,Key=K)
++AxisMappings=(AxisName="Mouse Movement",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Mouse Movement",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
