--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -69,6 +69,12 @@ bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
+bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -81,50 +87,26 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="Arm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Arm",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="C-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="C-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
-+ActionMappings=(ActionName="E-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="E-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
-+ActionMappings=(ActionName="F-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+ActionMappings=(ActionName="F-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="R-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
-+ActionMappings=(ActionName="R-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
-+ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Elevate Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
-+ActionMappings=(ActionName="Elevate Leg",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
-+ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
 +ActionMappings=(ActionName="Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
-+ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightShift)
 +ActionMappings=(ActionName="Arm P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="Slash-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Slash)
-+ActionMappings=(ActionName="Slash-X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
-+ActionMappings=(ActionName="Apostrophe-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Apostrophe)
-+ActionMappings=(ActionName="Apostrophe-A",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
-+ActionMappings=(ActionName="P-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
-+ActionMappings=(ActionName="P-B",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="LeftBracket-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftBracket)
-+ActionMappings=(ActionName="LeftBracket-Y",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
-+ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightAlt)
++ActionMappings=(ActionName="X P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="A P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="B P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="Y P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="Block P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
-+ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
 +ActionMappings=(ActionName="Elevate Leg P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="X",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="Move Forward P2",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Move Right P2",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="Move Forward Keyboard",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="Move Forward Keyboard",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="Move Right Keyboard",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="Move Right Keyboard",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=1.000000,Key=O)
-+AxisMappings=(AxisName="Move Forward Keyboard P2",Scale=-1.000000,Key=L)
-+AxisMappings=(AxisName="Move Right Keyboard P2",Scale=1.000000,Key=Semicolon)
-+AxisMappings=(AxisName="Move Right Keyboard P2",Scale=-1.000000,Key=K)
-+AxisMappings=(AxisName="Mouse Movement",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="Mouse Movement",Scale=1.000000,Key=MouseY)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
