--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,3 +22,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bGameSupportsMultipleActiveControllers=True
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=DA0F8038420E7C456C4EE7AF94D259F8
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
